<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/attention" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/connection_failed_ops"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/connection_failed_error"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_go_to_ffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/connection_failed_description"/>

    <TextView
        android:visibility="visible"
        android:id="@+id/txt_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/connection_failed_try_again"
        android:textAllCaps="false"/>


</LinearLayout>